Attempt properly to do double spacing

--- a/document.tex
+++ b/document.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\pagestyle{empty}
+\linespread{1.6}
 \begin{document}
 
 Your job is to take this piece of paper, and tear it in half
