--- a/document.tex
+++ b/document.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \linespread{1.6}
+\usepackage[parfill]{parskip}
 \begin{document}
 
 Your job is to take this piece of paper, and tear it in half
