Switch to Palatino as default font

--- a/document.tex
+++ b/document.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}
 \pagestyle{empty} 
+\renewcommand*\rmdefault{ppl}
 \linespread{1.6}
 \usepackage[margin=1in]{geometry}
 \usepackage[parfill]{parskip}
