Slight layout improvements

--- a/document.tex
+++ b/document.tex
@@ -6,20 +6,21 @@
 \usepackage[parfill]{parskip}
 \begin{document}
 
-Your job is to take this piece of paper, and tear it in half
-where the line crosses it:
+\emph{First}, take this piece of paper, and tear it in half
+where the line crosses it. Hand the bottom half to your buddy.
 
-\hrulefill
-
-Your task during this section is to read a bug report against a real project, and 
-then explain it to your buddy. If you are not sure what is going on, feel free to 
-ask your buddy for help.
+\emph{Then}, you (and your buddy's) task during this section is to
+read a bug report against a real project. You'll each explain it to
+each other after you're done understanding it. If you are not sure
+what is going on, feel free to ask your buddy for help.
 
 Remember that this is a real bug in a real project!
 
 Nickname: "No December"
 
 Link: https://code.google.com/p/android/issues/detail?id=39692
+
+Questions you should be able to answer (OK if you can't answer all):
 
 \begin{itemize}
 \item What is the problem the person is experiencing?
@@ -29,11 +30,10 @@ Link: https://code.google.com/p/android/issues/detail?id=39692
 
 \hrulefill
 
-
-
-Your task during this section is to read a bug report against a real project, and 
-then explain it to your buddy. If you are not sure what is going on, feel free to 
-ask your buddy for help.
+You (and your buddy's) task during this section is to read a bug
+report against a real project. You'll each explain it to each other
+after you're done understanding it. If you are not sure what is going
+on, feel free to ask your buddy for help.
 
 Remember that this is a real bug in a real project!
 
@@ -41,8 +41,9 @@ Nickname: "Can't print... sometimes"
 
 Link: https://bugs.launchpad.net/ubuntu/+source/cupsys/+bug/255161
 
+Questions you should be able to answer:
+
 \begin{itemize}
-\item Questions you should be able to answer:
 \item Are there particular days of the week that people can reliably print?
 \item Does uninstalling OpenOffice.org and reinstalling it help fix the problem?
 \item What is the actual cause of the problem?
